@@ -1,5 +1,7 @@
 --- CHANGELOG ---
 --- PyFMI-FUTURE ---
+    * Changed default log and file size limiations from 2 GiB (2*1024**3) to 2 GB (2e9).
+      Updated the corresponding error messages to correctly reference sizes in GB instead of GiB.
 
 --- PyFMI-2.16.2 ---
     * Increased robustness of getting the `supports` attribute from ResultHandlers.
